lab03/16/virtual-service-reviews-v1-2.yaml
####################################################################
# reviews virtualservice v1-v2
####################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1     
      weight: 90
    - destination:
        host: reviews
        subset: v2        
      weight: 10
