lab03/16/virtual-service-reviews-v2.yaml
####################################################################
# reviews virtualservice v2
####################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
